[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scripts/Zombie.gd" type="Script" id=1]
[ext_resource path="res://assets/Sprites/ZombieWalk8.png" type="Texture" id=2]
[ext_resource path="res://assets/Sprites/ZombieWalk7.png" type="Texture" id=3]
[ext_resource path="res://Scenes/CuredZombie.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Sprites/ZombieWalk2.png" type="Texture" id=5]
[ext_resource path="res://assets/Sprites/ZombieWalk3.png" type="Texture" id=6]
[ext_resource path="res://assets/Sprites/ZombieWalk4.png" type="Texture" id=7]
[ext_resource path="res://assets/Sprites/ZombieWalk6.png" type="Texture" id=8]
[ext_resource path="res://assets/Sprites/ZombieWalk5.png" type="Texture" id=9]
[ext_resource path="res://assets/Sprites/ZombieWalk1.png" type="Texture" id=10]
[ext_resource path="res://assets/Sprites/ZombieCured2.png" type="Texture" id=11]
[ext_resource path="res://assets/Sprites/ZombieCured1.png" type="Texture" id=12]
[ext_resource path="res://assets/Sprites/ZombieCured3.png" type="Texture" id=13]
[ext_resource path="res://assets/Sprites/ZombieCured4.png" type="Texture" id=14]
[ext_resource path="res://assets/Sprites/ZombieCured5.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 14 ) ],
"loop": true,
"name": "CuredWalking",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "Walking",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 9.96979

[sub_resource type="StreamTexture" id=3]
load_path = "res://.import/ZombieStunned.png-64b447f625338a153b949cf73ddadbe0.stex"

[sub_resource type="CircleShape2D" id=4]
radius = 9.91603

[sub_resource type="CircleShape2D" id=5]

[sub_resource type="CircleShape2D" id=6]

[node name="Zombie" type="KinematicBody2D"]
position = Vector2( 141.694, 136.978 )
collision_layer = 5
script = ExtResource( 1 )
Cured = ExtResource( 4 )
damage = 20
attack_cooldown = 3
detect_start_radius = 50
detect_stop_radius = 100

[node name="Sprite" type="AnimatedSprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.984799, 0.99517 )
frames = SubResource( 1 )
animation = "Idle"

[node name="ZombieBoundary" type="CollisionShape2D" parent="."]
scale = Vector2( 0.99517, 0.984799 )
shape = SubResource( 2 )

[node name="Stunned" type="Sprite" parent="."]
visible = false
position = Vector2( -0.396439, 1.08864 )
rotation = 1.5708
texture = SubResource( 3 )

[node name="ZombieStart" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZombieStart"]
shape = SubResource( 4 )

[node name="ZombieStop" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZombieStop"]
shape = SubResource( 5 )

[node name="ZombieAttack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZombieAttack"]
shape = SubResource( 6 )

[node name="StunnedTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 3.0
[connection signal="body_entered" from="ZombieStart" to="." method="_on_ZombieStart_body_entered"]
[connection signal="body_exited" from="ZombieStop" to="." method="_on_ZombieStop_body_exited"]
[connection signal="body_entered" from="ZombieAttack" to="." method="_on_ZombieAttack_body_entered"]
[connection signal="body_exited" from="ZombieAttack" to="." method="_on_ZombieAttack_body_exited"]
[connection signal="timeout" from="StunnedTimer" to="." method="_on_StunnedTimer_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
